# agent-orchestration

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  otel-config.yaml
frontend/: app.py
orchestration/: __init__.py  config.py
orchestration/agents/: base.py  reviewer.py  supervisor.py
orchestration/agents/specialists/: analyst.py  base_specialist.py  coder.py  researcher.py  writer.py
orchestration/api/: app.py  models.py  routes.py
orchestration/graph/: state.py  workflow.py
orchestration/hitl/: escalation.py  queue.py
orchestration/memory/: semantic.py  working.py
orchestration/observability/: metrics.py  tracing.py
orchestration/tools/: code_exec.py  database.py  file_ops.py  registry.py  setup.py  web_search.py
orchestration/workers/: celery_app.py  tasks.py
scripts/: demo.py  local_server.py  replay.py
tests/: test_decomposition.py  test_hitl.py  test_reviewer.py  test_tools.py
